Mobile UI: overflow--issue--oc

--- a/style.css
+++ b/style.css
@@ -123,9 +123,9 @@ button:hover{
     font-weight: 400;
     color: hsl(0, 100%, 67%);
 }
-@media only screen and (max-width: 375px){
+@media only screen and (min-width: 375px) and (max-width: 600px){
     body{
-        overflow: hidden;
+        /*overflow: auto;*/
         /*min-height: 100%;*/
         /*width: 100vw;*/
         /*display: grid;*/
